<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.purnota.zhsustbookhouse.cseActivity">
    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/firstSubCSE"
            android:text="@string/cse1"
            android:textColor="#fff"
            android:textSize="16sp"
            android:drawableLeft="@drawable/book"
            />


        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonTwo"
            android:layout_below="@id/firstSubCSE"
            android:text="@string/cse2"
            android:textSize="16sp"
            android:drawableLeft="@drawable/book"
            android:textColor="#fff"
            />
        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonThree"
            android:layout_below="@id/cseButtonTwo"
            android:text="@string/cse3"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonFour"
            android:layout_below="@id/cseButtonThree"
            android:text="@string/cse4"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonFive"
            android:layout_below="@id/cseButtonFour"
            android:text="@string/cse5"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonSix"
            android:layout_below="@id/cseButtonFive"
            android:text="@string/cse6"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonSeven"
            android:layout_below="@id/cseButtonFive"
            android:text="@string/cse7"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonEight"
            android:layout_below="@id/cseButtonSeven"
            android:text="@string/cse8"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />
        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonNine"
            android:layout_below="@id/cseButtonEight"
            android:text="@string/cse9"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonTen"
            android:layout_below="@id/cseButtonNine"
            android:text="@string/cse10"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonEleven"
            android:layout_below="@id/cseButtonTen"
            android:text="@string/cse11"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonTwelve"
            android:layout_below="@id/cseButtonEleven"
            android:text="@string/cse12"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonThirteen"
            android:layout_below="@id/cseButtonTwelve"
            android:text="@string/cse13"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonFourteen"
            android:layout_below="@id/cseButtonThirteen"
            android:text="@string/cse14"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonFifteen"
            android:layout_below="@id/cseButtonFourteen"
            android:text="@string/cse15"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/cseButtonSixteen"
            android:layout_below="@id/cseButtonFifteen"
            android:text="@string/cse16"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />


    </LinearLayout>
</ScrollView>
    </RelativeLayout>