<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_civil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.purnota.zhsustbookhouse.civilActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/firstSubCE"
            android:text="@string/ce1"
            android:textSize="16sp"
            android:textColor="#ffff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonTwo"
            android:layout_below="@id/firstSubCE"
            android:text="@string/ce2"
            android:textSize="16sp"
            android:drawableLeft="@drawable/book"
            android:textColor="#fff"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonThree"
            android:layout_below="@id/ceButtonTwo"
            android:text="@string/ce3"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonFour"
            android:layout_below="@id/ceButtonThree"
            android:text="@string/ce4"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonFive"
            android:layout_below="@id/ceButtonFour"
            android:text="@string/ce5"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonSix"
            android:layout_below="@id/ceButtonFive"
            android:text="@string/ce6"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonSeven"
            android:layout_below="@id/ceButtonFive"
            android:text="@string/ce7"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonEight"
            android:layout_below="@id/ceButtonSeven"
            android:text="@string/ce8"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />
        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonNine"
            android:layout_below="@id/ceButtonEight"
            android:text="@string/ce9"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonTen"
            android:layout_below="@id/ceButtonNine"
            android:text="@string/ce10"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonEleven"
            android:layout_below="@id/ceButtonTen"
            android:text="@string/ce11"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonTwelve"
            android:layout_below="@id/ceButtonEleven"
            android:text="@string/ce12"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />
        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonThirteen"
            android:layout_below="@id/ceButtonTwelve"
            android:text="@string/ce13"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />
        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonFourteen"
            android:layout_below="@id/ceButtonThirteen"
            android:text="@string/ce14"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />
        <Button
            android:textAllCaps="false"
            android:layout_marginTop="3dp"
            android:background="@color/colorFlower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:id="@+id/ceButtonFifteen"
            android:layout_below="@id/ceButtonFourteen"
            android:text="@string/ce15"
            android:textSize="16sp"
            android:textColor="#fff"
            android:drawableLeft="@drawable/book"
            />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
