<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeveloperActivity" >

    <ImageView
        android:id="@+id/imgMasud"
        android:layout_width="60dp"
        android:layout_height="75dp"
        android:src="@drawable/sheuly"
        />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="60dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgMasud"
        android:layout_marginTop="40dp"
        android:src="@drawable/meghla"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:text="@string/MeghlaAK"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0099ff"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignEnd="@+id/textView1"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text=" "
        android:textColor="#ffff"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:text="About Us"
        android:textAlignment="center"
        android:layout_marginTop="-70dp"
        android:textSize="25sp"
        android:textColor="#77b300"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SheulyAK"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0099ff"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/imgMasud"
        android:layout_toRightOf="@+id/imgMasud"
        android:layout_toEndOf="@+id/imgMasud"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PolyAK"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0099ff"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignEnd="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1" />

    <ImageView
        android:id="@+id/alamgirImage"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="-10dp"
        android:src="@drawable/sir"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamgirSir"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorAct"
        android:textSize="14sp"
        android:textStyle="bold"
        android:id="@+id/alamgirText"
        android:layout_alignTop="@+id/alamgirImage"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_height="75dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/poly"
        android:layout_width="60dp"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignStart="@+id/imageView1" />


</RelativeLayout>
